--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -10,7 +10,7 @@ CPPFLAGS	+=	-std=c++98
 RM			=	rm -rf
 
 SRCS		=	main.cpp		\
-				Array.hpp		\
+				Array.tpp
 
 OBJS		=	$(patsubst %.cpp, %.o, $(SRCS))
 
@@ -28,7 +28,6 @@ $(NAME): $(OBJS)
 clean:
 	@echo "$(COLOUR_RED)clean: Removing object files...$(COLOUR_END)"
 	@$(RM) $(OBJS)
-	@$(RM) *_shrubbery
 
 fclean: clean
 	@echo "$(COLOUR_RED)fclean: Removing program file...$(COLOUR_END)"
